--- a/baby_s/package.json
+++ b/baby_s/package.json
@@ -9,8 +9,12 @@
     "@visx/react-spring": "^2.6.0",
     "@visx/visx": "^2.9.0",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "moment": "^2.29.3",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.4.0",
+    "react-bootstrap-validation": "^0.1.11",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^18.0.0",
     "react-horizontal-stacked-bar-chart": "^8.15.2",
     "react-router-dom": "^6.3.0",
